# SupermarketReceipt-Refactoring-Kata

python/: README.md  catalog.py  pyproject.toml  receipt.py  receipt_printer.py  shopping_cart.py  teller.py
python/supermarket_receipt/: catalog.py  model_objects.py  receipt.py  receipt_printer.py  shopping_cart.py  teller.py
python/supermarket_receipt/templates/: receipt.html  receipt.txt
python/tests/: conftest.py  fake_catalog.py  test_fake_catalog.py  test_receipt_printer.py  test_supermarket.py
python/tests/approved_files/: test_receipt_printer.test_receipt_printer_with_bulk_discount_html.approved.txt  test_receipt_printer.test_receipt_printer_with_bulk_discount_text.approved.txt  test_receipt_printer.test_receipt_printer_with_discount.approved.txt  test_receipt_printer.test_receipt_printer_wo_discount.approved.txt  test_receipt_printer.test_receipt_printer_wo_discount.received.txt  test_receipt_printer.test_receipt_printer_wo_discount_html.approved.txt
